--- a/Requirements.txt
+++ b/Requirements.txt
@@ -9,17 +9,16 @@ packaging==24.1
 pandas==2.2.3
 patsy==0.5.6
 pillow==10.4.0
-pip==24.2
 POT==0.9.4
 pyparsing==3.1.4
 python-dateutil==2.9.0.post0
 pytz==2024.2
 scikit-learn==1.5.2
 scipy==1.14.1
-setuptools==65.5.0
 six==1.16.0
 statsmodels==0.14.4
 threadpoolctl==3.5.0
 tzdata==2024.2
 wget==3.2
 xgboost==2.1.1
+xlrd==2.0.1
